# cancer-prognosis-prediction

./: .gitignore  README.md  main.py  notebook.ipynb  pyproject.toml  requirements.txt
configs/: config.yaml
docs/: SUMMARY.md  data.md  diagrams.md  model_performance.md  modules.md  pipeline.md  run_2026_04_19.md
results/: fig1_km_stats.json  fig1_km_stats.stale_20260703_160450.bak  fig2_calibration_stats.json  fig2_calibration_stats.stage3b_20260703_161653.bak  fig3_pathway_attention_stats.json  fig4_architecture_forest_stats.json  methodological_notes.md  stage_0_baseline.json  stage_0_lasso_audit.json  stage_0_summary.md  stage_10_baselines.json  stage_11_geneonly.json  stage_12_reviewer_experiments.json  stage_13_table2_raw_cis.json  stage_14_table2_mpath_tcga_delta.json  stage_1_logreg.json  stage_1_summary.md  stage_2_fold4_forensic.json  stage_2_sage_minimal.json  stage_2_summary.md  stage_3_ref_mlp_clinical.json  stage_3_retrospective.md  stage_3_summary.md  stage_3a_sage_clinical.json  stage_3b_sage_clinical_lasso_honest.json  stage_3c_attention_per_fold.json  stage_3c_sage_pathway_clinical.json  stage_3d_knob_c_5fold_internal.json  stage_5_metabric_external.json  stage_5_retrospective.md  stage_5_summary.md  stage_5b_knob_b_metabric.json  stage_5c_knob_c_biobert_metabric.json  stage_9_extended_metrics.json
scripts/: 00_5_recover_er_pr.py  00_baseline.py  00_baseline_diag.py  00_lasso_audit.py  00_metabric_fetch.py  01_logreg.py  02_sage_minimal.py  03_ref_mlp_clinical_only.py  03a_sage_clinical.py  03b_sage_clinical_lasso_honest.py  03c_sage_pathway_clinical.py  05_metabric_external.py  06_figure_km_curves.py  06b_figure_calibration.py  06c_figure_pathway_attention.py  06d_knob_b_metabric.py  06e_knob_c_biobert_metabric.py  06f_figure_architecture_forest.py  (+9 more)
(+46 files in other folders)
