[project]
name = "cancer-prognosis-prediction"
version = "0.1.0"
description = ""
authors = [
    {name = "Mahdi Sarhangi",email = "mahdi.sarhangi78@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "torch (>=2.11.0,<3.0.0)",
    "torch-geometric (>=2.7.0,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "biopython (>=1.87,<2.0)",
    "transformers (>=5.4.0,<6.0.0)",
    "langchain (>=1.2.13,<2.0.0)",
    "faiss-cpu (>=1.13.2,<2.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
