[project]
name = "cancer-prognosis-prediction"
version = "0.1.0"
description = ""
authors = [
    {name = "Mahdi Sarhangi",email = "mahdi.sarhangi78@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "torch (>=2.11.0,<3.0.0)",
    "torch-geometric (>=2.7.0,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "biopython (>=1.87,<2.0)",
    "transformers (>=5.4.0,<6.0.0)",
    "faiss-cpu (>=1.13.2,<2.0.0)",
    "imbalanced-learn (>=0.12.0,<1.0.0)",
    "lifelines (>=0.29.0,<1.0.0)",
    "shap (>=0.46.0,<1.0.0)",
    "captum (>=0.7.0,<1.0.0)",
    "networkx (>=3.3,<4.0.0)",
    "pyyaml (>=6.0,<7.0.0)",
    "requests (>=2.32.0,<3.0.0)",
    "umap-learn (>=0.5.11,<0.6.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
